@@ -13,6 +13,9 @@ MAJOR CHANGES
 
 NEW FEATURES
 
+  - accept `Etable` input in `customPriorFun` (suggested by Alexander
+  Robitzsch)
+
   - vignette files for the package examples are now hosted on Github and
   can be accessed by following the link mentioned in the vignette location
   in the index or `?mirt` helpfile
